<resources>
    <string name="app_name">NextTracks</string>
    <string name="preferencesServer">"Connection"</string>
    <string name="preferencesHost">"Host"</string>
    <string name="preferencesPort">"Port"</string>
    <string name="preferencesWebsocket">Use WebSockets</string>
    <string name="preferencesUserUsername">"Username"</string>
    <string name="preferencesDeviceName">"Device ID"</string>
    <string name="preferencesBrokerPassword">"Password"</string>
    <string name="preferencesCaCrtPath">CA certificate</string>
    <string name="preferencesClientCrtPath">Client certificate</string>
    <string name="preferencesClientCrtPassword">Client certificate password</string>
    <string name="preferencesLicenses">"Libraries"</string>
    <string name="preferencesLicensesSummary">"Thanks to the authors of included libraries"</string>
    <string name="preferencesNotification">Notifications</string>
    <string name="preferencesNotificationEvents">Events</string>
    <string name="preferencesNotificationEventsSummary">Notify about received events</string>
    <string name="preferencesNotificationLocationSummary">"Display last reported location and time"</string>
    <string name="preferencesNotificationLocation">"Last reported location"</string>
    <string name="preferencesAdvanced">"Advanced"</string>
    <string name="preferencesVersion">"Version"</string>
    <string name="preferencesReporting">"Reporting"</string>
    <string name="preferencesTrackerId">Tracker ID</string>
    <string name="preferencesInfo">Information</string>
    <string name="preferencesRepository">Source Code</string>
    <string name="preferencesRepositorySummary" translatable="false">https://codeberg.com/nexttracks/android</string>
    <string name="preferencesDocumentation">OwnTracks Documentation</string>
    <string name="preferencesDocumentationSummary" translatable="false">https://owntracks.org/booklet</string>
    <string name="preferencesEncryptionKeySummary">Symmetric key for payload encryption </string>
    <string name="preferencesEncryptionKey">Encryption Key</string>
    <string name="preferencesEncryptionKeyDialogMessage">Encryption key is cut off after 32 characters.</string>
    <string name="na">Not available</string>
    <string name="save">"Save"</string>
    <string name="cancel">"Cancel"</string>
    <string name="preferencesCleanSessionEnabled">Clean Session</string>
    <string name="publish">Report</string>
    <string name="preferencesPubExtendedDataSummary">Include extended data in location reports</string>
    <string name="preferencesPubExtendedData">Extended data</string>
    <string name="preferencesAutostartSummary">Automatically start on device boot</string>
    <string name="preferencesAutostart">Autostart</string>
    <string name="preferencesRemoteCommand">Remote commands</string>
    <string name="preferencesRemoteCommandSummary">Enable remote commands</string>
    <string name="preferencesGeocode">Geocode</string>
    <string name="preferencesGeocodeSummary">Enable geocoding. Requires restart.</string>
    <string name="description">Description</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="radius">Radius</string>
    <string name="addWaypoint">Add waypoint</string>
    <string name="exportConfiguration">Export</string>
    <string name="contactLocationUnknown">No location is available</string>
    <string name="menuContactNavigate">Navigate</string>
    <string name="menuCurrentLoction">Current location</string>
    <string name="contactDetailsAccuracy">Accuracy</string>
    <string name="contactDetailsTopic">Identifier</string>
    <string name="waypointListPlaceholder">No regions defined yet</string>
    <string name="importConfig">Import</string>
    <string name="tls" translatable="false">TLS</string>
    <string name="preferencesSecurity">Security</string>
    <string name="accept">Accept</string>
    <string name="preferencesIdentification">Identification</string>
    <string name="preferencesParameters">Parameters</string>
    <string name="preferencesKeepalive">Keepalive</string>
    <string name="preferencesKeepaliveValidationError" formatted="true">Keepalive should be a minimum of %d</string>
    <string name="seconds">Seconds</string>
    <string name="preferencesProfileId">Mode</string>
    <string name="mode_mqtt_private_label">MQTT</string>
    <string name="aLocation">a region</string>
    <string name="events">Events</string>
    <string name="title_activity_regions">Regions</string>
    <string name="title_activity_region">Region</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_contacts">Friends</string>
    <string name="title_activity_status">Status</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="title_exit">Exit app</string>
    <string name="unableToCopyCertificate">Unable to copy certificate to internal storage</string>
    <string name="preferencesCategoryNotificationOngoing">Ongoing notification</string>
    <string name="preferencesCategoryNotificationBackground">Background notifications</string>
    <string name="preferencesCategoryAdvancedServices">Services</string>
    <string name="preferencesCategoryAdvancedLocator">Locator</string>
    <string name="preferencesCategoryAdvancedEncryption">Encryption</string>
    <string name="preferencesCategoryAdvancedMisc">Misc</string>
    <string name="contactDetailsTrackerId" translatable="false">Tracker ID</string>
    <string name="exportWaypointsToEndpoint">Publish Waypoints</string>
    <string name="preferencesExportFailed">Preferences export failed</string>
    <string name="preferencesExportSuccess">Export successful</string>
    <string name="welcomeFixIssue">Fix</string>
    <string name="preferencesUrl" translatable="false">URL</string>
    <string name="mode_http_private_label">HTTP</string>
    <string name="transitionEntering">enters</string>
    <string name="transitionLeaving">leaves</string>
    <string name="errorPreferencesImportFailed">Import failed</string>
    <string name="icon_description_warning">Warning</string>
    <string name="welcome_heading">Welcome</string>
    <string name="welcome_description">The following steps will help you to get started with NextTracks</string>
    <string name="mode_heading">Mode</string>
    <string name="mqtt_private_description">Connect to your own private NextTracks setup and share your location with family or friends</string>
    <string name="permissions_heading">Permissions</string>
    <string name="permissions_description">NextTracks requires access to your location. Please grant this permission before continuing.</string>
    <string name="external_storage_permissions_description">NextTracks requires access to your external storage in order to save the debug log to your device</string>
    <string name="permissions_granted">Permissions have been granted</string>
    <string name="icon_description_nexttracks">NextTracks</string>
    <string name="enjoy_description">Select preferences from the menu and configure NextTracks for your server before using it</string>
    <string name="done_heading">Done</string>
    <string name="icon_description_done">Done</string>
    <string name="title_activity_load">Import</string>
    <string name="errorPreferencesImportFailedParseException">unable to parse file</string>
    <string name="preferencesIgnoreInaccurateLocations">Inaccurate locations</string>
    <string name="preferencesIgnoreInaccurateLocationsSummary">Ignore inaccurate locations</string>
    <string name="preferencesIgnoreInaccurateLocationsDialog">Ignore location, if the accuracy is greater than the given meters</string>
    <string name="preferencesLocatorInterval">Location interval</string>
    <string name="preferencesLocatorIntervalSummary">Interval between location updates</string>
    <string name="preferencesLocatorIntervalDialog">How often should locations be requested from the device (seconds)</string>
    <string name="preferencesMoveModeLocatorInterval">Location interval (Move mode)</string>
    <string name="preferencesMoveModeLocatorIntervalSummary">Interval between location updates in Move mode</string>
    <string name="preferencesMoveModeLocatorIntervalDialog">How often should locations be requested from the device whilst in Move mode (seconds)</string>
    <string name="errorPreferencesImportFailedMemory">Your device ran out of memory</string>
    <string name="noNavigationApp">no suitable app installed</string>
    <string name="menuClear">Clear</string>
    <string name="configurationManagement">Configuration management</string>
    <string name="preferencesEditor">Editor</string>
    <string name="preferencesEditorKeyError">Invalid key specified</string>
    <string name="preferencesEditorValueError">Invalid value specified</string>
    <string name="preferencesEditorDescription">Set a single value for the specified key. Some changes might require an restart of the app.</string>
    <string name="preferencesLoadFailed">Unable to load effective configuration</string>
    <string name="preferencesEditorKey">Key</string>
    <string name="preferencesEditorValue">Value</string>
    <string name="restart">Restart</string>
    <plurals name="notificationEventsTitle">
        <item quantity="one">%1$d new event</item>
        <item quantity="other">%1$d new events</item>
    </plurals>
    <string name="ui_fragment_welcome_version_title">Restrictions</string>
    <string name="ui_fragment_welcome_version_description">Due to OS limitations, some features might work in a restricted manner. \n\n A permanent notification will be shown to keep running in the background. It can be disabled in the systems notification preferences. </string>
    <string name="ui_fragment_welcome_version_learn_more">Learn more</string>
    <string name="INITIAL">"Initializing</string>
    <string name="IDLE">Idle</string>
    <string name="CONNECTING">Connecting</string>
    <string name="CONNECTED">Connected</string>
    <string name="DISCONNECTING">Disconnecting</string>
    <string name="DISCONNECTED">Disconnected</string>
    <string name="DISCONNECTED_USERDISCONNECT">Disconnected</string>
    <string name="ERROR">Error</string>
    <string name="ERROR_DATADISABLED">Data connection not available</string>
    <string name="ERROR_CONFIGURATION">Configuration incomplete</string>
	<string name="notificationChannelOngoing">Ongoing</string>
    <string name="debugChannelOngoing">Debug</string>
	<string name="notificationChannelOngoingDescription">Required to receive location updates in the background</string>
	<string name="notificationChannelEventsDescription">Region transmissions</string>
    <string name="region_unknown">Status unknown</string>
    <string name="region_inside">Currently inside</string>
    <string name="region_outside">Currently outside</string>
    <string name="monitoring_quiet">Quiet monitoring mode</string>
    <string name="monitoring_manual">Manual monitoring mode</string>
    <string name="endpoint_state">Endpoint state</string>
    <string name="endpoint_queue">Endpoint queue</string>
    <string name="last_background_update">Location service last background update</string>
    <string name="background_service_started">Background service started</string>
    <string name="status_endpoint_state_hint">Endpoint state</string>
    <string name="status_endpoint_state_message_hint">Endpoint state message</string>
    <string name="status_endpoint_queue_hint">Endpoint queue</string>
    <string name="status_last_background_update_hint">Location service last background update</string>
    <string name="status_background_service_started_hint">Background service started</string>
    <string name="status_battery_optimization_whitelisted_hint">Battery optimization whitelisted</string>
</resources>